# DigiAssetWindows

./: .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  CHANGELOG.md  CHEATSHEET.md  CMakeLists.txt  DATABASE_OPTIMIZATION_PLAN.md  INTEGRATION-mctrivia.md  INVESTIGATION_SIGILL.md  LAST_TASKS_NOTES.md  NODE-SETUP.md  PERMANENT-STORAGE.md  PIPELINE-SYNC-TESTING.md  POOL-SETUP.md  TODO_TESTS.md  build_and_test.sh  example.cfg  install-node.ps1  make-snapshot.ps1  monitor-node.ps1  readme.md  run_tests.bat  seed-digibyte.ps1  setup-digiasset.ps1  setup-pool.ps1  stop-node.ps1  update-binaries.ps1  vcpkg.json
.github/workflows/: release.yml  windows-build.yml
cli/: CMakeLists.txt  main.cpp
fable_cheat_sheet/: 00_INDEX.md  01_architecture_overview.md  02_rpc_cli_and_build.md  03_transaction_encoding_and_database.md  04_qt_gui_and_web_docs.md  05_tests_and_psp.md  06_task_checklist.md  07_corrections_and_gotchas.md  08_remote_synced_node.md
node/: bench-sync.ps1  capture-chain-split-fixtures.ps1  memwatch.ps1  monitor-node.ps1  stop-node.ps1  test-asset-lifecycle.ps1  test-cli.ps1  test-integration.ps1  test-pr26-smoke.ps1  update-binaries.ps1  update-node.ps1
pool/: CMakeLists.txt  FAIRNESS.md  PoolDashboard.cpp  PoolDashboard.h  PoolDatabase.cpp  PoolDatabase.h  PoolServer.cpp  PoolServer.h  PoolVerifier.cpp  PoolVerifier.h  README.md  main.cpp
pool/deploy/: Caddyfile  README.md  add-peer.ps1  backup-digistamp.ps1  diagnose-website.ps1  provision-peer-pool.ps1  setup-caddy.ps1  start-digistamp.ps1  update-pool.ps1  verify-peers.ps1  verify-pool-stack.ps1
pool/deploy/site/: index.html
qt/: AssetIconProvider.cpp  AssetIconProvider.h  CMakeLists.txt  PlotManager.cpp  main.cpp
qt/tabs/: BalancesTab.cpp  BalancesTab.h  CreateAssetTab.cpp  CreateAssetTab.h  HistoryTab.cpp  HistoryTab.h  ManageAssetTab.cpp  ManageAssetTab.h  SendAssetTab.cpp  SendAssetTab.h
snapshots/: README.md  make-snapshot.ps1  publish-snapshot.ps1  seed-digibyte.ps1  setup-cloudflare-snapshots.ps1  snapshot-digibyte-datadir.ps1
src/: AppMain.cpp  AppMain.h  AssetWallet.cpp  AssetWallet.h  Base58.cpp  Base58.h  BitIO.cpp  BitIO.h  Blob.cpp  Blob.h  CMakeLists.txt  ChainAnalyzer.cpp  ChainAnalyzer.h  Config.cpp  Config.h  ConsoleDashboard.cpp  ConsoleDashboard.h  CurlHandler.cpp  CurlHandler.h  Database.cpp  Database.h  Database_LockedStatement.cpp  Database_LockedStatement.h  Database_Statement.cpp  Database_Statement.h  DigiAsset.cpp  DigiAsset.h  DigiAssetConstants.h  DigiAssetRules.cpp  DigiAssetRules.h  DigiAssetTypes.cpp  DigiAssetTypes.h  DigiByteCore.cpp  DigiByteCore.h  DigiByteCore_Exception.h  DigiByteCore_Types.h  DigiByteDomain.cpp  DigiByteDomain.h  DigiByteTransaction.cpp  DigiByteTransaction.h  (+27 more)
src/PermanentStoragePool/: PermanentStoragePool.cpp  PermanentStoragePool.h  PermanentStoragePoolList.cpp  PermanentStoragePoolList.h  PermanentStoragePoolMetaProcessor.cpp  PermanentStoragePoolMetaProcessor.h
src/PermanentStoragePool/pools/: custompool.cpp  custompool.h  digistamp.cpp  digistamp.h  local.cpp  local.h  mctrivia.cpp  mctrivia.h
src/RPC/: Cache.cpp  Cache.h  MethodList.cpp  MethodList.h  Response.cpp  Response.h  Server.cpp  Server.h
src/RPC/Methods/: addressstats.cpp  algostats.cpp  asyncclear.cpp  asyncget.cpp  asyncstart.cpp  burnasset.cpp  burnasset.html  debugwaittimes.cpp  getaddressholdings.cpp  getaddresskyc.cpp  getassetdata.cpp  getassetholders.cpp  getassetindexes.cpp  getdgbequivalent.cpp  getdomainaddress.cpp  getdomainaddress.html  getencryptedkey.cpp  getexchangerates.cpp  getipfscount.cpp  getnewaddress.cpp  getnewaddress.html  getnodestats.cpp  getoldstreamkey.cpp  getpsp.cpp  getrandom.cpp  (+27 more)
src/crypto/: SHA256.cpp  SHA256.h  ripemd.h
src/curl/: curl.h
src/jsonrpccpp/: client.h  server.h
src/openssl/: bio.h  evp.h
tests/: AppMainTest.cpp  BlobTest.cpp  CMakeLists.txt  ChainAnalyzerTest.cpp  ChainSplitFixtureTest.cpp  ConfigTest.cpp  CurlHandlerTest.cpp  DatabaseChain.cpp  DatabaseTest.cpp  Database_StatementTest.cpp  DigiAssetRulesEncodeTest.cpp  DigiAssetRulesTest.cpp  DigiAssetTest.cpp  DigiAssetTransactionTest.cpp  DigiAssetTypesTest.cpp  DigiByteDomainTest.cpp  DigiByteExceptionTest.cpp  DigiByteTransactionBuilderTest.cpp  IPFS.cpp  InstanceLockTest.cpp  KYCTest.cpp  LocalPoolTest.cpp  LogTest.cpp  PermanentStoragePoolListTest.cpp  PermanentStoragePoolMetaProcessorTest.cpp  PermanentStoragePoolTest.cpp  RPCMethods.cpp  RPCMethods.h  RPC_CacheTest.cpp  RPC_MethodListTest.cpp  RPC_ResponseTest.cpp  RPC_ServerTest.cpp  SHA256Test.cpp  TestHelpers.cpp  ThreadedTest.cpp  UniqueTaskQueueTest.cpp  UtilsTest.cpp  VersionTests.cpp
tests/RPC_Methods/: addressstats.cpp  algostats.cpp  asyncclear.cpp  asyncget.cpp  asyncstart.cpp  burnasset.cpp  debugwaittimes.cpp  getencryptedkey.cpp  getoldstreamkey.cpp  getrandom.cpp  getwalletbalances.cpp  issueasset.cpp  listassetissuances.cpp  reissueasset.cpp  resyncmetadata.cpp  send.cpp  sendasset.cpp  sendmany.cpp  sendtoaddress.cpp  shutdown.cpp  syncstate.cpp  version.cpp
tests/e2e/: run_e2e_tests.bat
tests/fixtures/chain-split-2026/: README.md
tests/fixtures/chain-split-2026/groestl-blocks/: block-23751096.json  block-23751103.json  block-23751109.json
tests/fixtures/chain-split-2026/scriptpubkey/: v7-addresses-plural.json  v8-v9-address-singular.json
tests/manual/: compare_exchange_rate_query.py
web/: index.html
web/rpc/: algostats.html  asyncclear.html  asyncget.html  asyncstart.html  burnasset.html  debugwaittimes.html  getaddressholdings.html  getaddresskyc.html  getassetdata.html  getassetholders.html  getassetindexes.html  getdgbequivalent.html  getdomainaddress.html  getencryptedkey.html  getexchangerates.html  getipfscount.html  getnodestats.html  getoldstreamkey.html  getpsp.html  getrandom.html  getwalletbalances.html  issueasset.html  listaddresshistory.html  listassetissuances.html  listassets.html  listlastassets.html  listlastassetspageindexes.html  listlastblocks.html  reissueasset.html  resyncmetadata.html  sendasset.html  sendmanyassets.html  shutdown.html  syncstate.html  version.html
(+79 files in other folders)
